[package]
name = "taxi"
version = "0.1.0"
authors = ["Peter Higley <phigley@gmail.com>"]
edition = "2018"

[lib]
name = "taxi"

[dependencies]
rand = "0.6"
rand_pcg = "0.1"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
rayon = "1.0"
float-cmp = "0.4"
enum-map = "0.4"

[target.'cfg(not(windows))'.dependencies]
tui = "0.3"
termion = "1.5"

[dev-dependencies]
assert_matches = "1.2"
criterion = "0.2"

[[bin]]
name = "taxi"
test = false

[[bench]]
name = "training_session"
harness = false