[package]
name = "taxi"
version = "0.1.0"
authors = ["Peter Higley <phigley@gmail.com>"]
edition = "2018"

[lib]
name = "taxi"

[dependencies]
rand = "0.7"
rand_pcg = "0.2"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
rayon = "1.3"
float-cmp = "0.4"
# float-cmp = "0.6"
enum-map = "0.6"

[target.'cfg(not(windows))'.dependencies]
tui = "0.3"
termion = "1.5"

[dev-dependencies]
assert_matches = "1.3"
criterion = "0.3"

[[bin]]
name = "taxi"
test = false

[[bench]]
name = "training_session"
harness = false